# mod-pi-touch

./: .gitmodules  CMakeLists.txt  README.md  deploy.sh  lv_conf.h
docs/: plan-output-port-monitoring.md
patches/: lv_evdev_physical_resolution.patch
resources/fonts/: lv_font_montserrat_12.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_24.c  lv_font_montserrat_28.c  lv_font_montserrat_32.c
scripts/: setup.sh
src/: bank.c  bank.h  host_comm.c  host_comm.h  hw_detect.c  hw_detect.h  i18n.c  i18n.h  lv2_utils.c  lv2_utils.h  main.c  pedalboard.c  pedalboard.h  plugin_manager.c  plugin_manager.h  pre_fx.c  pre_fx.h  settings.c  settings.h  snapshot.c  snapshot.h  tuner_host.c  tuner_host.h  widget_prefs.c  widget_prefs.h  wifi_manager.c  wifi_manager.h
src/ui/: ui_app.c  ui_app.h  ui_bank_browser.c  ui_bank_browser.h  ui_conductor.c  ui_conductor.h  ui_file_browser.c  ui_file_browser.h  ui_param_editor.c  ui_param_editor.h  ui_pedalboard.c  ui_pedalboard.h  ui_plugin_block.c  ui_plugin_block.h  ui_plugin_browser.c  ui_plugin_browser.h  ui_pre_fx.c  ui_pre_fx.h  ui_scene.c  ui_scene.h  ui_settings.c  ui_settings.h  ui_snapshot_bar.c  ui_snapshot_bar.h  ui_splash.c  ui_splash.h
